refactor: simplify task definitions and improve handler methods